--- a/tools/cloud-build/daily-tests/tests/ml-a3-megagpu-onspot-slurm-ubuntu.yml
+++ b/tools/cloud-build/daily-tests/tests/ml-a3-megagpu-onspot-slurm-ubuntu.yml
@@ -1,4 +1,4 @@
-# Copyright 2024 Google LLC
+# Copyright 2025 Google LLC
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -15,15 +15,13 @@
 ---
 
 # region, zone must be defined in build file with --extra-vars flag!
-test_name: a3m-slurm
-deployment_name: a3m-slurm-{{ build }}
-slurm_cluster_name: "a3m{{ build[0:4] }}"
+test_name: a3m-onspot-slurm
+deployment_name: a3m-{{ build }}-onspot-slurm
+slurm_cluster_name: "a3msp{{ build[0:5] }}"
 workspace: /workspace
 blueprint_yaml: "{{ workspace }}/examples/machine-learning/a3-megagpu-8g/a3mega-slurm-blueprint.yaml"
 login_node: "{{ slurm_cluster_name }}-login-*"
 controller_node: "{{ slurm_cluster_name }}-controller"
-region: us-west4
-zone: us-west4-a
 network: "{{ deployment_name }}-net-0"
 nccl_test_path: "examples/machine-learning/a3-megagpu-8g/nccl-tests"
 sub_network: "{{ deployment_name }}-sub-net-0"
@@ -47,7 +45,8 @@ custom_vars:
   mounts:
   - /home
   instance_labels:
-    a3mega_onspot: false
+    a3mega_onspot: true
+  enable_spot: true
 cli_deployment_vars:
   network_name_system: "{{ network }}"
   subnetwork_name_system: "{{ sub_network}}"
@@ -58,6 +57,6 @@ cli_deployment_vars:
   a3mega_cluster_size: 2
   enable_ops_agent: "true"
   enable_nvidia_dcgm: "true"
-  a3mega_reservation_name: a3mega-reservation-0
   enable_nvidia_persistenced: true
   final_image_family: "{{ deployment_name}}-u22"
+  a3mega_enable_spot_vm: true
