--- a/tools/cloud-build/daily-tests/tests/ml-a3-ultragpu-onspot-slurm.yml
+++ b/tools/cloud-build/daily-tests/tests/ml-a3-ultragpu-onspot-slurm.yml
@@ -28,8 +28,8 @@ post_deploy_tests:
 - test-validation/test-mounts.yml
 - test-validation/test-partitions.yml
 - test-validation/test-default-partition.yml
-# - test-validation/test-enroot.yml
-# - test-validation/test-gpus-slurm.yml
+- test-validation/test-enroot.yml
+- test-validation/test-gpus-slurm.yml
 post_destroy_tasks:
 - post-destroy-tasks/delete-image.yml
 custom_vars:
