--- a/examples/gke-a3-ultragpu/gke-a3-ultragpu.yaml
+++ b/examples/gke-a3-ultragpu/gke-a3-ultragpu.yaml
@@ -37,7 +37,7 @@ vars:
 
   enable_periodic_health_checks: false # Make this true to run CHS (healthchecks)
   health_check_schedule: "0 0 * * 0" # Run the health check at 12:00 AM (midnight) every Sunday
-
+  enable_spot_vm: false
   permissions_file_staged_path: $(ghpc_stage("./chs-permissions.yaml.tftpl"))
   chs_output_bucket_name: chs-result
   chs_pvc_claim_name: chs-output-pvc
@@ -263,6 +263,7 @@ deployment_groups:
         consume_reservation_type: SPECIFIC_RESERVATION
         specific_reservations:
         - name: $(vars.reservation)
+      spot: $(vars.enable_spot_vm)
       additional_networks:
         $(concat(
           [{
